--- a/config/castle.yml
+++ b/config/castle.yml
@@ -25,6 +25,7 @@ events:
       path: "/api/login"
       user_traits_from_params:
         email: user.email
+    deny_url: http://localhost.charlesproxy.com:3000/login?failed_error=1
   $logout.succeeded:
     status: '302'
     method: DELETE
