--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,4 +1,4 @@
-upstream puma {
+upstream boelandperpuma {
   server unix:///webapps/boelandper/shared/tmp/sockets/boelandper-puma.sock;
 }
 
@@ -29,8 +29,8 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @puma;
-  location @puma {
+  try_files $uri/index.html $uri @boelandperpuma;
+  location @boelandperpuma {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
