--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -39,7 +39,7 @@ server {
     proxy_set_header  X-Forwarded-Port $server_port;
     proxy_set_header  X-Forwarded-Host $host;
     proxy_redirect off;
-    proxy_pass http://puma;
+    proxy_pass http://boelandperpuma;
   }
 
   error_page 500 502 503 504 /500.html;
