--- a/config/castle.yml
+++ b/config/castle.yml
@@ -20,9 +20,9 @@ events:
       user_traits_from_params:
         email: user.email
       deny:
-        url: http://localhost.charlesproxy.com:3000/login?failed_error=1
+        url: https://verify.castlete.st/views/_deny.html
       challenge:
-        url: https://verify.castlete.st/views/challenge.html
+        url: https://verify.castlete.st/views/_challenge.html
     - status: '200'
       authenticate: true
       method: POST
