update nginx conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,7 +5,7 @@ upstream boelandperpuma {
 server {
   listen 80;
   listen [::]:80;
-  server_name app.castlete.st;
+  server_name castletest.com;
 
   return 301 https://$host$request_uri;
 }
@@ -13,11 +13,11 @@ server {
 server {
   listen 443;
   listen [::]:443;
-  server_name app.castlete.st;
+  server_name castleflare.com;
 
   ssl        on;
-  ssl_certificate         snippets/certificate.pem;
-  ssl_certificate_key     snippets/secret.key;
+  ssl_certificate         snippets/certificate_castleflare.com.pem;
+  ssl_certificate_key     snippets/secret_castleflare.com.key;
 
   root /webapps/boelandper/current/public;
   access_log /webapps/boelandper/current/log/nginx.access.log;
