update non ssl server block

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,7 +5,7 @@ upstream boelandperpuma {
 server {
   listen 80;
   listen [::]:80;
-  server_name castletest.com;
+  server_name castleflare.com;
 
   return 301 https://$host$request_uri;
 }
